--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,5 +1,11 @@
 monolog:
+    channels: ['api']
     handlers:
+        api:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.api.log"
+            level: error
+            channels: api
         main:
             type: fingers_crossed
             action_level: error
