--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "ext-zip": "*",
+        "api-platform/api-pack": "^1.2",
         "ovh/ovh": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -28,6 +30,7 @@
         "symfony/orm-pack": "1.0.*",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
+        "symfony/serializer": "5.0.*",
         "symfony/serializer-pack": "1.0.*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "5.0.*",
