add api platform and api endpoints for mobile application (#12)
* add api platform and api endpoints for mobile application

* add api auth

--- a/.env.dist
+++ b/.env.dist
@@ -34,3 +34,13 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=2a8f2b92b7597a29f74cd3f3ac33436f
+###< lexik/jwt-authentication-bundle ###
