--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+# routing is made with annotations
+authentication_token:
+    path: /authentication_token
+    methods: ['POST']
