--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "require-dev": {
         "symfony/debug-pack": "1.0.*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "1.0.*",
         "symfony/test-pack": "1.0.*"
     },
@@ -80,7 +81,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
