--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/debug-pack": "1.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.0",
@@ -84,6 +85,7 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "phpcs": "vendor/bin/phpcs",
         "test": "bin/phpunit"
     },
     "conflict": {
