--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "adrien-chinour/ellias",
+    "description": "Create and manage your email aliases.",
     "authors": [
         {
             "name": "Adrien Chinour",
@@ -41,8 +43,10 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/debug-pack": "1.0.*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "1.0.*",
         "symfony/test-pack": "1.0.*"
     },
@@ -80,7 +84,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "phpcs": "vendor/bin/phpcs",
+        "test": "bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
