update environmet file

--- a/.env
+++ b/.env
@@ -42,5 +42,5 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=2a8f2b92b7597a29f74cd3f3ac33436f
+JWT_PASSPHRASE=ellias
 ###< lexik/jwt-authentication-bundle ###
