--- a/composer.json
+++ b/composer.json
@@ -1,102 +1,103 @@
 {
-    "name": "adrien-chinour/ellias",
-    "description": "Create and manage your email aliases.",
-    "authors": [
-        {
-            "name": "Adrien Chinour",
-            "email": "github@chinour.fr"
-        }
-    ],
-    "type": "project",
-    "license": "MIT",
-    "require": {
-        "php": "^7.1.3",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "ext-json": "*",
-        "ext-zip": "*",
-        "api-platform/api-pack": "^1.2",
-        "knplabs/knp-paginator-bundle": "^5.2",
-        "ovh/ovh": "^2.0",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/apache-pack": "^1.0",
-        "symfony/asset": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "1.0.*",
-        "symfony/process": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
-        "symfony/serializer": "5.0.*",
-        "symfony/serializer-pack": "1.0.*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "5.0.*",
-        "symfony/twig-bundle": "5.0.*",
-        "symfony/validator": "5.0.*",
-        "symfony/web-link": "5.0.*",
-        "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "5.0.*"
-    },
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
-        "symfony/debug-pack": "1.0.*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^5.0",
-        "symfony/profiler-pack": "1.0.*",
-        "symfony/test-pack": "1.0.*"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ],
-        "phpcs": "vendor/bin/phpcs",
-        "test": "bin/phpunit",
-        "setup": "docker/php/setup.sh"
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.0.*"
-        }
+  "name": "adrien-chinour/ellias",
+  "description": "Create and manage your email aliases.",
+  "authors": [
+    {
+      "name": "Adrien Chinour",
+      "email": "github@chinour.fr"
     }
+  ],
+  "type": "project",
+  "license": "MIT",
+  "require": {
+    "php": "^7.4",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "ext-json": "*",
+    "ext-zip": "*",
+    "api-platform/api-pack": "^1.2",
+    "knplabs/knp-paginator-bundle": "^5.2",
+    "ovh/ovh": "^2.0",
+    "sensio/framework-extra-bundle": "^5.1",
+    "symfony/apache-pack": "^1.0",
+    "symfony/asset": "5.0.*",
+    "symfony/console": "5.0.*",
+    "symfony/dotenv": "5.0.*",
+    "symfony/expression-language": "5.0.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/form": "5.0.*",
+    "symfony/framework-bundle": "5.0.*",
+    "symfony/http-client": "5.0.*",
+    "symfony/intl": "5.0.*",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/orm-pack": "1.0.*",
+    "symfony/process": "5.0.*",
+    "symfony/security-bundle": "5.0.*",
+    "symfony/serializer": "5.0.*",
+    "symfony/serializer-pack": "1.0.*",
+    "symfony/swiftmailer-bundle": "^3.1",
+    "symfony/translation": "5.0.*",
+    "symfony/twig-bundle": "5.0.*",
+    "symfony/validator": "5.0.*",
+    "symfony/web-link": "5.0.*",
+    "symfony/webpack-encore-bundle": "^1.7",
+    "symfony/yaml": "5.0.*",
+    "ext-http": "*"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.5",
+    "symfony/debug-pack": "1.0.*",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/phpunit-bridge": "^5.0",
+    "symfony/profiler-pack": "1.0.*",
+    "symfony/test-pack": "1.0.*"
+  },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ],
+    "phpcs": "vendor/bin/phpcs",
+    "test": "bin/phpunit",
+    "setup": "docker/php/setup.sh"
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "5.0.*"
+    }
+  }
 }
