--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,29 +6,29 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/*'
+    exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
+  # controllers are imported separately to make sure services can be injected
+  # as action arguments even if you don't extend any base controller class
+  App\Controller\:
+    resource: '../src/Controller'
+    tags: ['controller.service_arguments']
 
-    # update this line with your custom provider implementation
-    App\Service\AliasApiInterface: '@App\Provider\Ovh\OvhAliasApi'
+  # update this line with your custom provider implementation
+  App\Service\AliasApiInterface: '@App\Provider\Gandi\GandiAliasApi'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
 
-    # even with service autowiring and autoconfiguration enabled, you must still configure the decoration
-    App\DataPersister\EmailDataPersister:
-        decorates: 'api_platform.doctrine.orm.data_persister'
+  # even with service autowiring and autoconfiguration enabled, you must still configure the decoration
+  App\DataPersister\EmailDataPersister:
+    decorates: 'api_platform.doctrine.orm.data_persister'
