--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,7 @@
     "symfony/validator": "5.0.*",
     "symfony/web-link": "5.0.*",
     "symfony/webpack-encore-bundle": "^1.7",
-    "symfony/yaml": "5.0.*",
-    "ext-http": "*"
+    "symfony/yaml": "5.0.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5",
