--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,34 +1,24 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
-parameters:
-
 services:
-  # default configuration for services in *this* file
   _defaults:
-    autowire: true      # Automatically injects dependencies in your services.
-    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    autowire: truew
+    autoconfigure: true
 
-  # makes classes in src/ available to be used as services
-  # this creates a service per class whose id is the fully-qualified class name
+  # Define namespace for DI
   App\:
     resource: '../src/*'
     exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-  # controllers are imported separately to make sure services can be injected
-  # as action arguments even if you don't extend any base controller class
   App\Controller\:
     resource: '../src/Controller'
     tags: ['controller.service_arguments']
 
-  # update this line with your custom provider implementation
+  # Define used provider
   App\Service\AliasApiInterface: '@App\Provider\Gandi\GandiAliasApi'
 
-  # add more service definitions when explicit configuration is needed
-  # please note that last definitions always *replace* previous ones
+  # Logger decorator for api call
+  App\Service\AliasApiLoggerDecorator:
+    decorates: 'App\Service\AliasApiInterface'
 
-  # even with service autowiring and autoconfiguration enabled, you must still configure the decoration
+  ### API Platform configuration
+
   App\DataPersister\EmailDataPersister:
     decorates: 'api_platform.doctrine.orm.data_persister'
