--- a/composer.json
+++ b/composer.json
@@ -17,37 +17,38 @@
     "ext-zip": "*",
     "api-platform/api-pack": "^1.2",
     "knplabs/knp-paginator-bundle": "^5.2",
+    "lexik/jwt-authentication-bundle": "^2.8",
     "ovh/ovh": "^2.0",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/apache-pack": "^1.0",
-    "symfony/asset": "5.0.*",
-    "symfony/console": "5.0.*",
-    "symfony/dotenv": "5.0.*",
-    "symfony/expression-language": "5.0.*",
+    "symfony/asset": "5.1.*",
+    "symfony/console": "5.1.*",
+    "symfony/dotenv": "5.1.*",
+    "symfony/expression-language": "5.1.*",
     "symfony/flex": "^1.3.1",
-    "symfony/form": "5.0.*",
-    "symfony/framework-bundle": "5.0.*",
-    "symfony/http-client": "5.0.*",
-    "symfony/intl": "5.0.*",
+    "symfony/form": "5.1.*",
+    "symfony/framework-bundle": "5.1.*",
+    "symfony/http-client": "5.1.*",
+    "symfony/intl": "5.1.*",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "1.0.*",
-    "symfony/process": "5.0.*",
-    "symfony/security-bundle": "5.0.*",
-    "symfony/serializer": "5.0.*",
+    "symfony/process": "5.1.*",
+    "symfony/security-bundle": "5.1.*",
+    "symfony/serializer": "5.1.*",
     "symfony/serializer-pack": "1.0.*",
     "symfony/swiftmailer-bundle": "^3.1",
-    "symfony/translation": "5.0.*",
-    "symfony/twig-bundle": "5.0.*",
-    "symfony/validator": "5.0.*",
-    "symfony/web-link": "5.0.*",
+    "symfony/translation": "5.1.*",
+    "symfony/twig-bundle": "5.1.*",
+    "symfony/validator": "5.1.*",
+    "symfony/web-link": "5.1.*",
     "symfony/webpack-encore-bundle": "^1.7",
-    "symfony/yaml": "5.0.*"
+    "symfony/yaml": "5.1.*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/debug-pack": "1.0.*",
     "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^5.0",
+    "symfony/phpunit-bridge": "^5.1",
     "symfony/profiler-pack": "1.0.*",
     "symfony/test-pack": "1.0.*"
   },
@@ -96,7 +97,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.0.*"
+      "require": "5.1.*"
     }
   }
 }
