--- a/config/api_platform/resources.yaml
+++ b/config/api_platform/resources.yaml
@@ -4,18 +4,17 @@ resources:
             get: ~
             post: ~
         itemOperations:
-            get: ~
             delete: ~
             patch:
                 denormalization_context:
                     groups: ['update']
 
-    App\Dto\Target:
+    App\Dto\Email:
         collectionOperations:
             get:
                 method: GET
-                path: /target
-                controller: App\Controller\TargetEmailApiController
+                path: /email
+                controller: App\Controller\EmailApiController
                 openapi_context:
                     summary: Get all available emails for aliases
         itemOperations: []
