WIP: api endpoint for mobile app

--- a/config/api_platform/resources.yaml
+++ b/config/api_platform/resources.yaml
@@ -4,6 +4,7 @@ resources:
             get: ~
             post: ~
         itemOperations:
+            get: ~
             delete: ~
             patch:
                 denormalization_context:
