--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Adrien Chinour <git@chinour.fr>
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-    curl nano git apt-transport-https build-essential apt-utils openssl \
+    curl nano git apt-transport-https build-essential apt-utils openssl gnupg \
     libpng-dev locales libicu-dev zip unzip libzip-dev sqlite3 libsqlite3-dev; \
     rm -rf /var/lib/apt/lists/*
 
@@ -21,7 +21,11 @@ RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
     echo "fr_FR.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen
 
-RUN echo 'alias sf="php app/console"' >> ~/.bashrc
+RUN echo 'alias sf="php bin/console"' >> ~/.bashrc
+
+RUN curl -sS dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+RUN apt-get update && apt-get install -y yarn
 
 WORKDIR /app
 EXPOSE 9000
