--- a/composer.json
+++ b/composer.json
@@ -19,36 +19,37 @@
     "knplabs/knp-paginator-bundle": "^5.2",
     "lexik/jwt-authentication-bundle": "^2.8",
     "ovh/ovh": "^2.0",
-    "sensio/framework-extra-bundle": "^5.1",
+    "sensio/framework-extra-bundle": "^5.2",
     "symfony/apache-pack": "^1.0",
-    "symfony/asset": "5.1.*",
-    "symfony/console": "5.1.*",
-    "symfony/dotenv": "5.1.*",
-    "symfony/expression-language": "5.1.*",
-    "symfony/flex": "^1.3.1",
-    "symfony/form": "5.1.*",
-    "symfony/framework-bundle": "5.1.*",
-    "symfony/http-client": "5.1.*",
-    "symfony/intl": "5.1.*",
+    "symfony/asset": "5.2.*",
+    "symfony/console": "5.2.*",
+    "symfony/dotenv": "5.2.*",
+    "symfony/expression-language": "5.2.*",
+    "symfony/flex": "^1.11.0",
+    "symfony/form": "5.2.*",
+    "symfony/framework-bundle": "5.2.*",
+    "symfony/http-client": "5.2.*",
+    "symfony/intl": "5.2.*",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "1.0.*",
-    "symfony/process": "5.1.*",
-    "symfony/security-bundle": "5.1.*",
-    "symfony/serializer": "5.1.*",
+    "symfony/process": "5.2.*",
+    "symfony/security-bundle": "5.2.*",
+    "symfony/serializer": "5.2.*",
     "symfony/serializer-pack": "1.0.*",
     "symfony/swiftmailer-bundle": "^3.1",
-    "symfony/translation": "5.1.*",
-    "symfony/twig-bundle": "5.1.*",
-    "symfony/validator": "5.1.*",
-    "symfony/web-link": "5.1.*",
+    "symfony/translation": "5.2.*",
+    "symfony/twig-bundle": "5.2.*",
+    "symfony/validator": "5.2.*",
+    "symfony/web-link": "5.2.*",
     "symfony/webpack-encore-bundle": "^1.7",
-    "symfony/yaml": "5.1.*"
+    "symfony/yaml": "5.2.*"
   },
   "require-dev": {
+    "phpstan/phpstan": "^0.12.65",
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/debug-pack": "1.0.*",
     "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^5.1",
+    "symfony/phpunit-bridge": "^5.2",
     "symfony/profiler-pack": "1.0.*",
     "symfony/test-pack": "1.0.*"
   },
@@ -56,7 +57,8 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "cache-dir": "/tmp"
   },
   "autoload": {
     "psr-4": {
@@ -87,9 +89,10 @@
     "post-update-cmd": [
       "@auto-scripts"
     ],
-    "phpcs": "vendor/bin/phpcs",
+    "phpcs": "vendor/bin/phpcs src tests",
+    "phpstan": "vendor/bin/phpstan analyse src tests",
     "test": "bin/phpunit",
-    "setup": "docker/php/setup.sh"
+    "setup": "bin/setup"
   },
   "conflict": {
     "symfony/symfony": "*"
@@ -97,7 +100,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.1.*"
+      "require": "5.2.*"
     }
   }
 }
