--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,10 @@ services:
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     php:
         container_name: ellias_php
-        build: docker/php
+        build:
+            context: docker/php
+            args:
+                USER_ID: ${USER_ID}
+                GROUP_ID: ${GROUP_ID}
         volumes:
             - .:/app
