--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-    "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.12.1",
-        "@symfony/webpack-encore": "^0.28.2",
-        "bootstrap": "^4.4.1",
-        "core-js": "^3.0.0",
-        "jquery": "^3.4.1",
-        "node-sass": "^4.14.0",
-        "popper.js": "^1.16.1",
-        "regenerator-runtime": "^0.13.2",
-        "sass-loader": "^7.0.1",
-        "select2": "^4.0.13",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    }
+  "devDependencies": {
+    "@popperjs/core": "^2.6.0",
+    "@symfony/webpack-encore": "^0.28.2",
+    "bootstrap": "^5.0.0-beta1",
+    "core-js": "^3.0.0",
+    "regenerator-runtime": "^0.13.2",
+    "webpack-notifier": "^1.6.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  }
 }
