--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
     "symfony/framework-bundle": "5.2.*",
     "symfony/http-client": "5.2.*",
     "symfony/intl": "5.2.*",
+    "symfony/messenger": "5.2.*",
+    "symfony/mime": "5.2.*",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "1.0.*",
     "symfony/process": "5.2.*",
