feat: add async message for synchronizing aliases

--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "ext-json": "*",
+    "ext-redis": "*",
     "ext-zip": "*",
     "api-platform/api-pack": "^1.2",
     "knplabs/knp-paginator-bundle": "^5.2",
     "lexik/jwt-authentication-bundle": "^2.8",
     "ovh/ovh": "^2.0",
     "sensio/framework-extra-bundle": "^5.2",
+    "symfony/amqp-messenger": "5.2.*",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "5.2.*",
     "symfony/console": "5.2.*",
@@ -30,6 +32,7 @@
     "symfony/framework-bundle": "5.2.*",
     "symfony/http-client": "5.2.*",
     "symfony/intl": "5.2.*",
+    "symfony/mercure-bundle": "^0.2.6",
     "symfony/messenger": "5.2.*",
     "symfony/mime": "5.2.*",
     "symfony/monolog-bundle": "^3.1",
