--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
     "knplabs/knp-paginator-bundle": "^5.2",
     "lexik/jwt-authentication-bundle": "^2.8",
     "ovh/ovh": "^2.0",
-    "sensio/framework-extra-bundle": "^5.2",
+    "sensio/framework-extra-bundle": "^5.6",
     "symfony/amqp-messenger": "5.2.*",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "5.2.*",
+    "symfony/cache": "5.2.*",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/expression-language": "5.2.*",
