--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,7 @@ services:
         environment:
             RABBITMQ_DEFAULT_USER: rabbit
             RABBITMQ_DEFAULT_PASS: rabbit
+    redis:
+        container_name: redis
+        image: redis:6-alpine
+
