feat: update configuration with symfony 5.2 version

--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,24 +1,18 @@
 monolog:
-    channels: ['api']
     handlers:
-        api:
-            type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.api.log"
-            level: debug
-            channels: api
         main:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
-            channels: ["!event", "!api"]
+            channels: ["!event"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
-        firephp:
-            type: firephp
-            level: info
-        chromephp:
-            type: chromephp
-            level: info
+        #firephp:
+        #    type: firephp
+        #    level: info
+        #chromephp:
+        #    type: chromephp
+        #    level: info
         console:
             type: console
             process_psr_3_messages: false
