--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,16 +1,11 @@
 monolog:
-    channels: ['api']
     handlers:
-        api:
-            type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.api.log"
-            level: error
-            channels: api
         main:
             type: fingers_crossed
             action_level: error
             handler: nested
-            excluded_http_codes: [404, 405]
+            excluded_http_codes: [ 404, 405 ]
+            buffer_size: 50 # How many messages should be saved? Prevent memory leaks
         nested:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
@@ -18,12 +13,4 @@ monolog:
         console:
             type: console
             process_psr_3_messages: false
-            channels: ["!event", "!doctrine"]
-        deprecation:
-            type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
-        deprecation_filter:
-            type: filter
-            handler: deprecation
-            max_level: info
-            channels: ["php"]
+            channels: [ "!event", "!doctrine" ]
