--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,13 @@ jobs:
                 php-versions: [ '7.4' ]
         name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
         steps:
-            -   uses: actions/checkout@v2
+            -   name: Checkout
+                uses: actions/checkout@v2
+
+            -   name: Install PHP
+                uses: shivammathur/setup-php@v2
+                with:
+                    php-version: ${{ matrix.php-versions }}
 
             -   name: Validate composer.json and composer.lock
                 run: composer validate
