--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2
 
-            -   name: Install PHP
+            -   name: PHP Setup
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php-versions }}
