--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "ext-json": "*",
-    "ext-redis": "*",
     "ext-zip": "*",
     "api-platform/api-pack": "^1.2",
     "knplabs/knp-paginator-bundle": "^5.2",
@@ -61,8 +60,7 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true,
-    "cache-dir": "/tmp"
+    "sort-packages": true
   },
   "autoload": {
     "psr-4": {
