--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "cache-dir": "/tmp"
   },
   "autoload": {
     "psr-4": {
