chore: add continue-on-error option on github action quality ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,22 @@ jobs:
 
             -   name: Validate composer.json and composer.lock
                 run: composer validate
+                continue-on-error: true
 
             -   name: Install dependencies
                 run: composer install --prefer-dist --no-progress --no-suggest
+                continue-on-error: true
 
             -   name: PHP Code Standards Violations Analysis
                 run: composer run-script phpcs
+                continue-on-error: true
 
             -   name: PHP Static Analysis
                 run: composer run-script phpstan
+                continue-on-error: true
 
             -   name: Run test suite
                 run: composer run-script test
+                continue-on-error: true
                 env:
                     APP_ENV: test
