refactor: improve mercure notifications configuration

--- a/.env
+++ b/.env
@@ -53,8 +53,8 @@ MESSENGER_TRANSPORT_DSN=amqp://rabbit:rabbit@rabbitmq:5672/%2f/messages
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 MERCURE_PUBLISH_URL=http://mercure/.well-known/mercure
-# The default token is signed with the secret key: !ChangeMe!
-MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOltdfX0.Oo0yg7y4yMa1vr_bziltxuTCqb8JVHKxp-f_FwwOim0
+MERCURE_SECRET_KEY=!ChangeMe!
+MERCURE_SUBSCRIBE_URL=http://localhost:1337/.well-known/mercure
 ###< symfony/mercure-bundle ###
 
 PROVIDER_NAME=fake
